src/objects/Framework__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What is the Product that this is tied to for Automation?</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Frameworks</relationshipLabel>
        <relationshipName>Frameworks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must choose an Active Mission.</errorMessage>
            <filterItems>
                <field>Program__c.isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Frameworks</relationshipLabel>
        <relationshipName>Frameworks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the Framework is currently active/available.</description>
        <inlineHelpText>Is this Framework currently active?</inlineHelpText>
        <label>Active Framework</label>
        <type>Checkbox</type>
    </fields>
    <label>Framework</label>
    <nameField>
        <label>Framework Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Frameworks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>